--- a/requirements.txt
+++ b/requirements.txt
@@ -36,9 +36,12 @@ static3==0.7.0
 Unidecode==0.4.20
 urllib3==1.20
 wagtail==1.9
-wagtail-markdown==0.4.1
+
 wagtailfontawesome==1.0.6
 wagtailmodeladmin==2.5.7
 webencodings==0.5.1
 whitenoise==3.3.0
 Willow==0.4
+
+# Wagtail-markdown
+git+https://github.com/torchbox/wagtail-markdown.git@mediafix#egg=wagtail-markdown
