--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ olefile==0.44
 Pillow==4.1.0
 psycopg2==2.7.1
 Pygments==2.2.0
+python-decouple==3.0
 pytz==2017.2
 raven==6.0.0
 rcssmin==1.0.6
@@ -42,6 +43,8 @@ wagtailmodeladmin==2.5.7
 webencodings==0.5.1
 whitenoise==3.3.0
 Willow==0.4
+gunicorn
 
 # Wagtail-markdown
 git+https://github.com/torchbox/wagtail-markdown.git@mediafix#egg=wagtail-markdown
+Pygments==2.1.3  # actually more of a dependency of wagtail-markdown, watch that space
